<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="album" type="com.example.vinilos.models.Album" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        tools:context=".ui.createAlbum.CreateAlbum">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:baselineAligned="false">

                <EditText
                    android:id="@+id/editTextAlbumName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/rounded_rectangle"
                    android:drawableEnd="@drawable/ic_name"
                    android:ems="10"
                    android:hint="@string/activity_create_album_nombre"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_white" />

                <EditText
                    android:id="@+id/editTextAlbumPortada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/rounded_rectangle"
                    android:drawableEnd="@drawable/ic_link"
                    android:ems="10"
                    android:hint="@string/activity_create_album_portada"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_white" />

                <EditText
                    android:id="@+id/editTextAlbumDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/rounded_rectangle"
                    android:drawableEnd="@drawable/ic_baseline_description_24"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/activity_create_album_descripcion"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_white" />

                <EditText
                    android:id="@+id/editTextAlbumFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/rounded_rectangle"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:ems="10"
                    android:hint="@string/activity_create_album_fecha"
                    android:inputType="date"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_white" />

                <Spinner
                    android:id="@+id/spinnerAlbumGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/rounded_rectangle"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:ems="10"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_white" />

                <Spinner
                    android:id="@+id/spinnerAlbumDisquera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:background="@drawable/rounded_rectangle"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dark_white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="7dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/apple_blossom"
                        android:onClick="cancelCreation"
                        android:padding="15dp"
                        android:text="@string/activity_create_album_cancel"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/bali_hai"
                        android:onClick="createAlbum"
                        android:padding="15dp"
                        android:text="@string/activity_create_album_create"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>