<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_album"
        android:title="@string/title_album" />

    <item
        android:id="@+id/navigation_collectors"
        android:icon="@drawable/ic_collector"
        android:title="@string/title_collectors" />

    <item
        android:id="@+id/navigation_performers"
        android:icon="@drawable/ic_artists"
        android:title="@string/title_artists" />

</menu>