<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.artistas.ArtistasFragment"
    android:background="@color/dark">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/performersRv"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/performer_item"/>
</FrameLayout>